# prj006-practice-bgfx

./: CMakeLists.txt  README.md  compile-assets.bat  config.bat  imgui.ini
Assets/Textures/: fieldstone-n.dds  fieldstone-rgba.dds
Source/: Camera.cpp  Camera.h  Geometries.cpp  Geometries.h  GeometryBase.cpp  GeometryBase.h  Input.cpp  Input.h  Loading.cpp  Loading.h  MaterialBase.cpp  MaterialBase.h  Materials.cpp  Materials.h  Mesh.cpp  Mesh.h  Object3D.cpp  Object3D.h  main.cpp
Source/Assets/Textures/: fieldstone-n.tga
Source/Shaders/test/: test_f.sc  test_v.sc
